cks-solutions/s_06/denyall.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: prod-deny-all
  namespace: prod-a
spec:
  podSelector: {}
  policyTypes:
  - Ingress
