cks-solutions/s_06/isolatens.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-namespace
  namespace: prod-a
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          nsname: default
    - namespaceSelector:
        matchLabels:
          nsname: prod-a      
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          nsname: default
    - namespaceSelector:
        matchLabels:
          nsname: prod-a
